| Bug #54859 | >2 replica: Hanging if 1 node can not be restored using REDO log during SR | ||
|---|---|---|---|
| Submitted: | 28 Jun 2010 9:12 | Modified: | 28 Jun 2010 9:22 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[28 Jun 2010 9:12]
Jonas Oreland
[28 Jun 2010 9:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/112319 3229 Jonas Oreland 2010-06-28 ndb - bug#54859 - use correct state-variable when computing redo intervals
[28 Jun 2010 9:22]
Jonas Oreland
pushed to 6.3.36, 7.0.17 and 7.1.6 hmm...probably no need to document, closing.
