ndb - bug#54859 - use correct state-variable when computing redo intervals